tests/NormalTests/paczka1/fuzzy1/93246318.err
Error in line 2: vwBKkF7sQ S165 64,8
Error in line 1: 4xR A276 28,0
Error in line 17: kHfx2 A692 &3,9
Error in line 36: A692 S864 10,1
